--- a/css/index.css
+++ b/css/index.css
@@ -435,12 +435,7 @@ ul{
 	.circle img{
 		transition:all .5s;
 	}
-	.circle:hover img{
-		width: 144px;
-		height:108px;
-		margin-left: -72px;
-		margin-top: -54px;
-	}
+	
 	.chanpin_txt2{
 		width: 34.7%;
 		/*float: left;*/
@@ -667,15 +662,6 @@ ul{
 	.chanpin_tab .circle:nth-of-type(1){
 		margin-top: 16px;
 	}
-	.circle img{
-		position: absolute;
-		left: 50%;
-		top: 50%;
-		margin-top: -45px;
-		margin-left: -60px;
-		height: 90px;
-		width: 120px;
-	}
 	.chanpin_tab{
 		width: 750px;
 		height: 958px;
@@ -710,6 +696,9 @@ ul{
 	}
 	.circle{
 		left: 75px;
+	}
+	.content1_box2 .content1_img_box,.content1_box2 .content1_txt1{
+		float: none;
 	}
 }
 @media (max-width: 992px){
@@ -1046,6 +1035,24 @@ ul{
 	}
 	.anli_box1 li img{
 		width:100%;
+	}
+}
+@media (min-width: 500px){
+	.circle img{
+		height: 90px;
+		width: 120px;
+		position: absolute;
+		left: 50%;
+		top: 50%;
+		margin-top: -45px;
+		margin-left: -60px;
+	}
+	.circle:hover img{
+		width: 144px;
+		height:108px;
+		margin-top: -54px;
+		margin-left: -72px;
+
 	}
 }
 @media (max-width:500px){
